compiler/testData/diagnostics/testsWithStdLib/coroutines/suspensionPointInMonitorNewInf.diag.txt
/suspensionPointInMonitorNewInf.kt:20:13: error: the 'suspensionPoint' suspension point is inside a critical section
            suspensionPoint()
            ^^^^^^^^^^^^^^^
/suspensionPointInMonitorNewInf.kt:24:13: error: the 'suspensionPoint' suspension point is inside a critical section
            suspensionPoint()
            ^^^^^^^^^^^^^^^
/suspensionPointInMonitorNewInf.kt:27:30: error: the 'suspensionPoint' suspension point is inside a critical section
        synchronized(lock, { suspensionPoint() })
                             ^^^^^^^^^^^^^^^
/suspensionPointInMonitorNewInf.kt:39:13: error: the 'suspensionPoint' suspension point is inside a critical section
            suspensionPoint()
            ^^^^^^^^^^^^^^^
/suspensionPointInMonitorNewInf.kt:46:9: error: the 'suspensionPoint' suspension point is inside a critical section
        suspensionPoint()
        ^^^^^^^^^^^^^^^
/suspensionPointInMonitorNewInf.kt:55:45: error: the 'returnsInt' suspension point is inside a critical section
                    return@synchronized 1 + returnsInt()
                                            ^^^^^^^^^^

